# librelane_plugin_fabulous

./: .gitignore  Readme.md  default.nix  fabulous-fpga.nix  fasm.nix  flake.nix  pyproject.toml  requirements.txt
.github/scripts/: generate_tag.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: Makefile  README.md
docs/odg/: 2x2_apart.odg  2x2_together.odg  single_tile.odg  supertile_apart.odg  supertile_together.odg
librelane_plugin_fabulous/: __init__.py  fabulous_fabric.py  fabulous_tile.py
librelane_plugin_fabulous/scripts/: add_buffers.tcl  io_place.py  manual_ioplacer.tcl  odb_pins.py  odb_power.py
nix/: FABulous-bit-gen.nix  fabulous-fasm.nix  fabulous-fpga.nix  overlay.nix  sdf-timing.nix
nix/patches/fabulous/: emulation_rows.patch  fix_supertile_framedata_o.patch  ignore_destination.patch  keep_tiles.patch
nix/patches/openroad/: fix_connect_by_abutment.patch
openlane_plugin_example/: __init__.py  example.py
openlane_plugin_example/scripts/: double_area.rb
openlane_plugin_fabulous/: fabulous_fabric.py  fabulous_tile.py
openlane_plugin_fabulous/scripts/: io_place.py  odb_power.py
