[tool.poetry]
name = "openlane_plugin_fabulous"
version = "0.1.0"
description = "FABulous plugin for OpenLane"
authors = ["Leo Moser <leomoser99@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

include = [
    "scripts/io_place.py",
    "scripts/odb_power.py",
]

[tool.poetry.dependencies]
python = ">=3.8"
#openlane = ">=2.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
