[tool.poetry]
name = "librelane_plugin_fabulous"
version = "1.0.0"
description = "FABulous plugin for LibreLane"
authors = ["Leo Moser <leomoser99@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

include = [
    "scripts/io_place.py",
    "scripts/odb_power.py",
]

[tool.poetry.dependencies]
python = ">=3.8"
librelane = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
